Small updates in Toolset page

--- a/sites/toolset.mdx
+++ b/sites/toolset.mdx
@@ -37,6 +37,7 @@ A lot of VSCode powers comes from a fantastic extension repository, and some req
 - [TabNine](https://marketplace.visualstudio.com/items?itemName=TabNine.tabnine-vscode): If you ever dreamt about the code that writes itself, this is the extension you want. Creepy. Awesome. But creepy. Must have.
 - [Todo Tree](https://marketplace.visualstudio.com/items?itemName=Gruntfuggly.todo-tree): The best way to work with TODO logging in code.
 - [vscode-icons](https://marketplace.visualstudio.com/items?itemName=vscode-icons-team.vscode-icons): Those are nice looking icons.
+- [Live Share](https://marketplace.visualstudio.com/items?itemName=MS-vsliveshare.vsliveshare-pack): Pair programming in remote times.
 
 Finally, it is not an extension, but a must-have for me: [Fira Code](https://github.com/tonsky/FiraCode) font. Check it out. You will love it.
 
@@ -54,7 +55,7 @@ On both systems, I leverage [Node.js](https://nodejs.org/en/) for JavaScript rel
 
 ### API Client
 
-[Insomnia Core](https://insomnia.rest/). It is simple, and it works.
+[Postman](http://postman.com). It is simple, and it works.
 
 ### Design
 
